SPRING WEB FLOW (SWF) CHANGELOG
===============================
http://www.springframework.org

Changes in version 1.0.1 (08.01.2007)
-------------------------------------

General
* In Ivy, JUnit is no longer a default dependency. There is now a new 'testing' configuration that
  includes JUnit as a dependency (SWF-213).

Package org.springframework.webflow.action
* FormAction methods getFormObject and getFormErrors are no longer final (SWF-222).
* When FormAction detects that the existing Errors instance is invalid, it will now copy over
  existing field and object errors to the newly created Errors instance (SWF-219).

Package org.springframework.webflow.config
* Added get/setMaxConversations and get/setMaxContinuations methods to FlowExecutorFactoryBean. Also
  added corresponding configuration abilities to the config schema (SWF-210).
* Fixed bug in FlowExecutorFactoryBean where the ClientContinuationFlowExecutionRepository was being
  configured with the SessionBindingConversationManager by default (SWF-216).
* The conversationManager argument of the createExecutionRepository hook method in the
  FlowExecutorFactoryBean is now possibly null. Review your implementation if you were overriding
  this method!
* Fixed JDK 1.3 compatibility issue in FlowSystemDefaults (SWF-227).

Package org.springframework.webflow.context
* ExternalContextHolder now uses a ThreadLocal instead of an InheritableThreadLocal (SWF-206).

Package org.springframework.webflow.conversation
* The default value of the maxConversations property of the SessionBindingConversationManager is
  now 5. It used to be -1 (unlimited).
* Added getConversationIdGenerator and getMaxConversations methods to SessionBindingConversationManager.
* Reduced log level from INFO to DEBUG.

Package org.springframework.webflow.definition
* Added debug logging to FlowDefinitionRegistryImpl.
* FlowDefinitionResource now has a public static helper method named conventionalFlowId that implements